src/libkwineffects/kwinoffscreenquickview.cpp
@@ -429,6 +429,11 @@ QQuickItem *OffscreenQuickView::contentItem() const
     return d->m_view->contentItem();
 }
 
+QQuickWindow *OffscreenQuickView::window() const
+{
+    return d->m_view;
+}
+
 void OffscreenQuickView::setVisible(bool visible)
 {
     if (d->m_visible == visible) {
